initiate swagger
